DSNPI-1009 fix overlapping maps issue

--- a/src/components/ApplicationCard/ApplicationCard.scss
+++ b/src/components/ApplicationCard/ApplicationCard.scss
@@ -16,12 +16,15 @@
   }
 
   // map and data
-  &__map {
-    @include govuk-grid-column("one-third", $at: desktop);
+  &__map-data {
+    display: flex;
+    flex-direction: column;
+    gap: $govuk-gutter-half * 2;
     margin-bottom: govuk-spacing(6);
-  }
-  &__data {
-    @include govuk-grid-column("two-thirds", $at: desktop);
+
+    @include govuk-media-query($from: desktop) {
+      flex-direction: row;
+    }
   }
 
   &__fields {
